Javadoc fixes, Strongly typed Collection<>, organize imports, remove unneeded java.lang., null value checking, fully qualified classnames -> imports.